--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "browser-sync": "^2.17.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
     "gulp-inject": "^4.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.7.3",
